--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -11,9 +11,9 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
         --main-top-padding: 50px;
     }
 
-    --body-background: #f5f5fa;
+    --body-background: #fefefe;
 
-    --accent-color: #34495e;
+    --accent-color: #333;
     --accent-color-darker: #2c3e50;
     --accent-color-text: #fff;
     --body-text-color: #707070;
